-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.5.1
-
None
-
3
-
13846
LU-2743 introduced a regression into lustre_idl.h. One reason that it no longer compiles in installed user space because of this addition:
#include <lustre/lustre_errno.h>
But lustre_errno. is not packaged.
There are two questions that need answering:
- Should lustre_idl.h really include lustre_errno.h?
- Should lustre_errno.h really be a new interface exposed to user space?
If the answers to both are "yes", we can consider packaging lustre_errno.h.
Of course, we also need to decide if we will continue packaging luste_idl.h (see parent issue LU-1606). If we stop packaging it, then this ticket is moot.
- is blocking
-
LU-5011 lustre_idl.h again does not compile in user space
-
- Closed
-